Fix тестов: тесты отладились на локальных данных. Далее тестируется контроллер с подключением к БД.
