# src/main/java/todo/entity/Todo.java
@@ -1,71 +1,21 @@
 package todo.entity;
 
-import jakarta.persistence.*;
-import jakarta.validation.constraints.NotBlank;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
 import lombok.Data;
-import lombok.Getter;
-import lombok.Setter;
-import org.springframework.lang.NonNull;
 
-import java.sql.Timestamp;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.UUID;
+import java.io.Serializable;
 
 @Data
-public class Todo {
+@Entity
+public class Todo implements Serializable {
 
-
-    //@GeneratedValue(strategy = GenerationType.UUID)
     @Id
-    private String id;
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
 
-    @NotBlank
-    @Column(nullable = false)
-    private String todoTitle;
-
-    @NotBlank
-    @Column(nullable = false)
-    private String details;
-    private LocalDateTime created;
-    private LocalDateTime modified;
-
-    @NotBlank
-    @Column(nullable = false)
-    private String priority;
-
-    @NotBlank
-    @Column(nullable = false)
-    private String status;
-
-    private boolean completed;
-
-    @NotBlank
-    @Column(nullable = false)
-    private String author;
-
-    @NotBlank
-    @Column(nullable = false)
-    private String executor;
-
-    public Todo() {
-        LocalDateTime now = LocalDateTime.now();
-        this.id = UUID.randomUUID().toString();
-        this.created = now;
-        this.modified = now;
-    }
-
-    public Todo(String todoTitle,
-                String details,
-                String priority,
-                String status,
-                String author,
-                String executor) {
-        this.todoTitle = todoTitle;
-        this.details = details;
-        this.priority = priority;
-        this.status = status;
-        this.author = author;
-        this.executor = executor;
-    }
+    private String title;
+    private String description;
 }
